2004-07-11  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_createlist)  Copy the MTA options
	to avoid persistently changing them in "nocreate" mode.
	Thanks to Darren Stalder.

	* setup/query_util.pl:  (get_passwd)  Do not allow commas
	in passwords.
	Thanks to Darren Stalder.

	* setup/setup_func.pl:  (install_response_files)  Install
	the setup scripts to allow site/domain reconfiguration
	outside the source directory.

2004-07-10  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200407100.

	* lib/Mj/Parser.pm:  (parse_part)  Support the SESSIONID
	substitution in the command summary.

	* lib/Mj/Resend.pm:  (_check_approval)  Issue an error
	if an "Approved" line is not followed by a blank line
	or a valid e-mail header.

2004-06-28  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_changeaddr)  Allow two addresses
	with identical xforms, which are not aliases, to be
	used.  Thanks to SRE.

2004-06-26  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceParser.pm:  Add various sanity checks.
	Thanks to SRE.

2004-06-22  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_rekey)  Bugfix:  Take bookkeeping
	aliases into account when rekeying the alias database.
	Thanks to SRE.

	* lib/Mj/List.pm:  (aux_rekey)  Bugfix:  Rekey based
	upon the stripped address, to allow xforms to be reversed.
	Thanks to SRE.

2004-06-19  Michael Yount <csf@moscow.com>

	* lib/Mj/CommandProps.pm:  Bugfix:  The "info" and "intro"
	commands should also work in a GLOBAL or DEFAULT context.

2004-06-14  Michael Yount <csf@moscow.com>

	* lib/Mj/SimpleDB/Text.pm:  (get_matching_quick_regexp)  Bugfix:
	Remove anchors from the pattern more thoroughly.
	(The rekey-verify command was returning spurious results for
	text databases.)  Thanks to SRE.

2004-05-24  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_showtokens)  Show tokens for the
	"ALL" pseudo-list along with GLOBAL tokens.

	* lib/Mj/Token.pm:  (confirm)  Bugfix:  Record commands