@@ -9,7 +9,7 @@ require "setup/install_util.pl";
 require "setup/setup_func.pl";
 use vars qw($config $lang $nosep $sepclear);
 
-$config = eval { require ".mj_config" };
+$config = read_mj_config($lang);
 die retr_msg('no_mj_config', $lang)
   unless $config;
 
@@ -92,8 +92,8 @@ sub ask_site_config {
 
 =head1 COPYRIGHT
 
-Copyright (c) 2003 Jason Tibbitts for The Majordomo Development Group.
-All rights reserved.
+Copyright (c) 2003, 2004 Jason Tibbitts for The Majordomo Development
+Group.  All rights reserved.
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the license detailed in the LICENSE file of the
